--- a/src/Forge.Web/Components/Pages/Weather.razor
+++ b/src/Forge.Web/Components/Pages/Weather.razor
@@ -46,12 +46,14 @@ else
 
         var startDate = DateOnly.FromDateTime(DateTime.Now);
         var summaries = new[] { "Freezing", "Bracing", "Chilly", "Cool", "Mild", "Warm", "Balmy", "Hot", "Sweltering", "Scorching" };
+#pragma warning disable CA5394 // Random is acceptable here as this is demo data generation, not security-sensitive
         forecasts = Enumerable.Range(1, 5).Select(index => new WeatherForecast
         {
             Date = startDate.AddDays(index),
             TemperatureC = Random.Shared.Next(-20, 55),
             Summary = summaries[Random.Shared.Next(summaries.Length)]
         }).ToArray();
+#pragma warning restore CA5394
     }
 
     private class WeatherForecast
